# audio_capture

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.cmd  go.mod
.github/workflows/: build.yml  build.yml.bak
api/: audio.go  binary_loader.go  linux.go  windows.go  windows_dynamic.go
bindings/go/: INSTALL.md  Makefile  QUICK_START.md  README.md  audio.go  audio_linux.go  audio_windows.go  go.mod  windows.go
bindings/go/examples/app_capture/: main.go
bindings/go/examples/basic_capture/: main.go
bindings/go/pkg/audio/: capture.go  capture_linux.go  capture_windows.go  types.go  wav_writer.go
bindings/go/scripts/: prepare_release.bat  prepare_release.cmd
bindings/python/: CMakeLists.txt  README.md  audio_capture.cpp  audio_capture.py  build_wheel.cmd  build_wheel.py  c_interface.cpp  cleanup.py  pyproject.toml  setup.cfg  setup.py
bindings/python/audio_capture/: capture.py
bindings/python/audio_capture.egg-info/: SOURCES.txt  top_level.txt
bindings/python/examples/: basic_capture.py  capture_example.py
c/linux/: Makefile
c/windows/: CMakeLists.txt  Makefile  README.md  wasapi_capture.cpp  wasapi_capture.def  wasapi_capture.h
examples/: main.go
python/: MANIFEST.in
python/audio_capture/: __init__.py  utils.py
python/audio_capture.egg-info/: PKG-INFO  requires.txt
utils/: wav_writer.go
